Updated Crew Structure. Still have to define the various crews and their roles. Next update will modify the procedure to use the navigator and crawler to clone the site as markdown and images to be used for analysis by the crews. This will significantly reduce the traffic to the site as the crews will not have to create new requests for information from the site durring their opperation.

--- a/env.example
+++ b/env.example
@@ -1,3 +1,9 @@
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 USERNAME=your_username_here
 PASSWORD=your_password_here
+
+
+SERPER_API_KEY=KEY # https://serper.dev/ (free tier)
+BROWSERLESS_API_KEY=KEY # https://www.browserless.io/ (free tier)
+OPENAI_API_KEY=KEY
+EXA_API_KEY=Your Key
