Defined the agent crews and tools. still have mroe to do.

--- a/env.example
+++ b/env.example
@@ -7,3 +7,7 @@ SERPER_API_KEY=KEY # https://serper.dev/ (free tier)
 BROWSERLESS_API_KEY=KEY # https://www.browserless.io/ (free tier)
 OPENAI_API_KEY=KEY
 EXA_API_KEY=Your Key
+SXNG_URL=127.0.0.1
+SXNG_PORT=8888
+
+GHIDRA_ANALYZER_PATH=/usr/share/ghidra/support/analyzeHeadless
